src/Black.Beard.Calendarium/Calendarium/Grammar/CalendariumParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CalendariumParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Bb.Calendaruim.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
public partial class CalendariumParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		YEAR=1, MONTH=2, DAY=3, DAYWEEK=4, MONDAY=5, TUESDAY=6, WEDNESDAY=7, THURSDAY=8, 
		FRIDAY=9, SATURDAY=10, SUNDAY=11, CHAR_STRING=12, LEFT_PAREN=13, LEFT_BRACKET=14, 
		RIGHT_PAREN=15, RIGHT_BRACKET=16, COLON=17, SEMICOLON=18, COMMA=19, PLUS=20, 
		MINUS=21, TIME=22, DOT=23, DIVID=24, NOT=25, EQUAL=26, MODULO=27, POWER=28, 
		NOT_EQUAL=29, GREATER=30, GREATER_OR_EQUAL=31, LESS=32, LESS_OR_EQUAL=33, 
		XOR=34, OR=35, AND=36, ANDALSO=37, SLASH=38, INTEROGATION=39, SPACES=40, 
		NUMBER=41, SINGLE_LINE_COMMENT=42, MULTI_LINE_COMMENT=43, REGULAR_ID=44;
	public const int
		RULE_script = 0, RULE_expression_bool = 1, RULE_expression = 2, RULE_operation = 3, 
		RULE_rule = 4, RULE_mask = 5, RULE_dayweek = 6, RULE_identifier = 7;
	public static readonly string[] ruleNames = {
		"script", "expression_bool", "expression", "operation", "rule", "mask", 
		"dayweek", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'YEAR'", "'MONTH'", "'DAY'", "'DAYWEEK'", "'MONDAY'", "'TUESDAY'", 
		"'WEDNESDAY'", "'THURSDAY'", "'FRIDAY'", "'SATURDAY'", "'SUNDAY'", null, 
		"'('", "'['", "')'", "']'", "':'", "';'", "','", "'+'", "'-'", "'*'", 
		"'.'", null, "'!'", "'='", "'%'", "'^'", "'!='", "'>'", "'>='", "'<'", 
		"'<='", "'||'", "'|'", "'&'", "'&&'", null, "'?'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "YEAR", "MONTH", "DAY", "DAYWEEK", "MONDAY", "TUESDAY", "WEDNESDAY", 
		"THURSDAY", "FRIDAY", "SATURDAY", "SUNDAY", "CHAR_STRING", "LEFT_PAREN", 
		"LEFT_BRACKET", "RIGHT_PAREN", "RIGHT_BRACKET", "COLON", "SEMICOLON", 
		"COMMA", "PLUS", "MINUS", "TIME", "DOT", "DIVID", "NOT", "EQUAL", "MODULO", 
		"POWER", "NOT_EQUAL", "GREATER", "GREATER_OR_EQUAL", "LESS", "LESS_OR_EQUAL", 
		"XOR", "OR", "AND", "ANDALSO", "SLASH", "INTEROGATION", "SPACES", "NUMBER", 
		"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "REGULAR_ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CalendariumParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CalendariumParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CalendariumParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CalendariumParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ScriptContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode INTEROGATION() { return GetToken(CalendariumParser.INTEROGATION, 0); }
		public Expression_boolContext expression_bool() {
			return GetRuleContext<Expression_boolContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(CalendariumParser.COLON, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		try {
			State = 22;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MONDAY:
			case TUESDAY:
			case WEDNESDAY:
			case THURSDAY:
			case FRIDAY:
			case SATURDAY:
			case SUNDAY:
			case LEFT_PAREN:
			case LEFT_BRACKET:
			case PLUS:
			case MINUS:
			case TIME:
			case GREATER:
			case LESS:
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 16; expression();
				}
				break;
			case INTEROGATION:
				EnterOuterAlt(_localctx, 2);
				{
				State = 17; Match(INTEROGATION);
				State = 18; expression_bool();
				State = 19; Match(COLON);
				State = 20; expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Expression_boolContext : ParserRuleContext {
		public DayweekContext[] dayweek() {
			return GetRuleContexts<DayweekContext>();
		}
		public DayweekContext dayweek(int i) {
			return GetRuleContext<DayweekContext>(i);
		}
		public ITerminalNode OR() { return GetToken(CalendariumParser.OR, 0); }
		public ITerminalNode LEFT_PAREN() { return GetToken(CalendariumParser.LEFT_PAREN, 0); }
		public Expression_boolContext expression_bool() {
			return GetRuleContext<Expression_boolContext>(0);
		}
		public ITerminalNode RIGHT_PAREN() { return GetToken(CalendariumParser.RIGHT_PAREN, 0); }
		public Expression_boolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression_bool; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression_bool(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Expression_boolContext expression_bool() {
		Expression_boolContext _localctx = new Expression_boolContext(Context, State);
		EnterRule(_localctx, 2, RULE_expression_bool);
		int _la;
		try {
			State = 33;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MONDAY:
			case TUESDAY:
			case WEDNESDAY:
			case THURSDAY:
			case FRIDAY:
			case SATURDAY:
			case SUNDAY:
				EnterOuterAlt(_localctx, 1);
				{
				State = 24; dayweek();
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==OR) {
					{
					State = 25; Match(OR);
					State = 26; dayweek();
					}
				}

				}
				break;
			case LEFT_PAREN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 29; Match(LEFT_PAREN);
				State = 30; expression_bool();
				State = 31; Match(RIGHT_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public RuleContext rule() {
			return GetRuleContext<RuleContext>(0);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode LEFT_PAREN() { return GetToken(CalendariumParser.LEFT_PAREN, 0); }
		public ITerminalNode RIGHT_PAREN() { return GetToken(CalendariumParser.RIGHT_PAREN, 0); }
		public OperationContext operation() {
			return GetRuleContext<OperationContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_expression);
		int _la;
		try {
			State = 48;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MONDAY:
			case TUESDAY:
			case WEDNESDAY:
			case THURSDAY:
			case FRIDAY:
			case SATURDAY:
			case SUNDAY:
			case LEFT_BRACKET:
			case TIME:
			case NUMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 35; rule();
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MONDAY) | (1L << TUESDAY) | (1L << WEDNESDAY) | (1L << THURSDAY) | (1L << FRIDAY) | (1L << SATURDAY) | (1L << SUNDAY) | (1L << LEFT_PAREN) | (1L << LEFT_BRACKET) | (1L << PLUS) | (1L << MINUS) | (1L << TIME) | (1L << GREATER) | (1L << LESS) | (1L << NUMBER))) != 0)) {
					{
					State = 36; expression();
					}
				}

				}
				break;
			case LEFT_PAREN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39; Match(LEFT_PAREN);
				State = 40; expression();
				State = 41; Match(RIGHT_PAREN);
				State = 43;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MONDAY) | (1L << TUESDAY) | (1L << WEDNESDAY) | (1L << THURSDAY) | (1L << FRIDAY) | (1L << SATURDAY) | (1L << SUNDAY) | (1L << LEFT_PAREN) | (1L << LEFT_BRACKET) | (1L << PLUS) | (1L << MINUS) | (1L << TIME) | (1L << GREATER) | (1L << LESS) | (1L << NUMBER))) != 0)) {
					{
					State = 42; expression();
					}
				}

				}
				break;
			case PLUS:
			case MINUS:
			case GREATER:
			case LESS:
				EnterOuterAlt(_localctx, 3);
				{
				State = 45; operation();
				State = 46; expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContext : ParserRuleContext {
		public ITerminalNode PLUS() { return GetToken(CalendariumParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(CalendariumParser.MINUS, 0); }
		public ITerminalNode[] GREATER() { return GetTokens(CalendariumParser.GREATER); }
		public ITerminalNode GREATER(int i) {
			return GetToken(CalendariumParser.GREATER, i);
		}
		public ITerminalNode[] LESS() { return GetTokens(CalendariumParser.LESS); }
		public ITerminalNode LESS(int i) {
			return GetToken(CalendariumParser.LESS, i);
		}
		public OperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationContext operation() {
		OperationContext _localctx = new OperationContext(Context, State);
		EnterRule(_localctx, 6, RULE_operation);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PLUS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50; Match(PLUS);
				}
				break;
			case MINUS:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51; Match(MINUS);
				}
				break;
			case GREATER:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 52; Match(GREATER);
				State = 53; Match(GREATER);
				}
				}
				break;
			case LESS:
				EnterOuterAlt(_localctx, 4);
				{
				{
				State = 54; Match(LESS);
				State = 55; Match(LESS);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleContext : ParserRuleContext {
		public MaskContext mask() {
			return GetRuleContext<MaskContext>(0);
		}
		public ITerminalNode LEFT_BRACKET() { return GetToken(CalendariumParser.LEFT_BRACKET, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode RIGHT_BRACKET() { return GetToken(CalendariumParser.RIGHT_BRACKET, 0); }
		public DayweekContext dayweek() {
			return GetRuleContext<DayweekContext>(0);
		}
		public ITerminalNode TIME() { return GetToken(CalendariumParser.TIME, 0); }
		public ITerminalNode NUMBER() { return GetToken(CalendariumParser.NUMBER, 0); }
		public RuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleContext rule() {
		RuleContext _localctx = new RuleContext(Context, State);
		EnterRule(_localctx, 8, RULE_rule);
		int _la;
		try {
			State = 68;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; mask();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 59; Match(LEFT_BRACKET);
				State = 60; identifier();
				State = 61; Match(RIGHT_BRACKET);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==TIME) {
					{
					State = 63; Match(TIME);
					}
				}

				State = 66; dayweek();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 67; Match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MaskContext : ParserRuleContext {
		public IToken month;
		public IToken day;
		public ITerminalNode MINUS() { return GetToken(CalendariumParser.MINUS, 0); }
		public ITerminalNode[] NUMBER() { return GetTokens(CalendariumParser.NUMBER); }
		public ITerminalNode NUMBER(int i) {
			return GetToken(CalendariumParser.NUMBER, i);
		}
		public MaskContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mask; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMask(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MaskContext mask() {
		MaskContext _localctx = new MaskContext(Context, State);
		EnterRule(_localctx, 10, RULE_mask);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; _localctx.month = Match(NUMBER);
			State = 71; Match(MINUS);
			State = 72; _localctx.day = Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DayweekContext : ParserRuleContext {
		public ITerminalNode MONDAY() { return GetToken(CalendariumParser.MONDAY, 0); }
		public ITerminalNode TUESDAY() { return GetToken(CalendariumParser.TUESDAY, 0); }
		public ITerminalNode WEDNESDAY() { return GetToken(CalendariumParser.WEDNESDAY, 0); }
		public ITerminalNode THURSDAY() { return GetToken(CalendariumParser.THURSDAY, 0); }
		public ITerminalNode FRIDAY() { return GetToken(CalendariumParser.FRIDAY, 0); }
		public ITerminalNode SATURDAY() { return GetToken(CalendariumParser.SATURDAY, 0); }
		public ITerminalNode SUNDAY() { return GetToken(CalendariumParser.SUNDAY, 0); }
		public DayweekContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dayweek; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDayweek(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DayweekContext dayweek() {
		DayweekContext _localctx = new DayweekContext(Context, State);
		EnterRule(_localctx, 12, RULE_dayweek);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MONDAY) | (1L << TUESDAY) | (1L << WEDNESDAY) | (1L << THURSDAY) | (1L << FRIDAY) | (1L << SATURDAY) | (1L << SUNDAY))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		public ITerminalNode REGULAR_ID() { return GetToken(CalendariumParser.REGULAR_ID, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICalendariumParserVisitor<TResult> typedVisitor = visitor as ICalendariumParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(Context, State);
		EnterRule(_localctx, 14, RULE_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(REGULAR_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace Bb.Calendaruim.Parser
